feat: stock market widget, circle posts/members tabs, real data
- Add stockService.ts + live market indices widget to LoginPage and HomePage right rail
- CircleDetailPage: wire 帖子 and 成员 tabs with real API data
- Backend: add GET /circles/{id}/posts returning FeedPageResponse (typed, with author join)
- Backend: fix FeedPageResponse to carry optional nextCursor for cursor-based pagination
- Fix SearchServiceImpl + FavoriteServiceImpl FeedItemResponse constructor (missing publishTime)
- Remove duplicate /circles/{id}/posts from CircleMemberController